--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,15 @@
 	<artifactId>xmlvalue-bug</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+	<properties>
+		<version.jaxb>2.3.1-SNAPSHOT</version.jaxb>
+	</properties>
 	<dependencies>
 
 		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.2.11.redhat-2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.2.11.redhat-2</version>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>${version.jaxb}</version>
 		</dependency>
 
 		<dependency>
@@ -37,4 +34,13 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
