--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,30 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<version.jaxb>2.3.1-SNAPSHOT</version.jaxb>
+		<!--<version.jaxb>2.1.17</version.jaxb>-->
+		<version.jaxb>2.3.1.ot-SNAPSHOT</version.jaxb>
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>${version.jaxb}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.istack</groupId>
+			<artifactId>istack-commons-runtime</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+
+<!--
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
 			<version>${version.jaxb}</version>
 		</dependency>
+-->
 
 		<dependency>
 			<groupId>junit</groupId>
