--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<!--<version.jaxb>2.1.17</version.jaxb>-->
+		<!--<version.jaxb>2.2.5</version.jaxb>-->
 		<version.jaxb>2.3.1.ot-SNAPSHOT</version.jaxb>
 	</properties>
 	<dependencies>
